--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="text_size">24sp</dimen>
     <dimen name="margin">16dp</dimen>
+    <dimen name="padding">24dp</dimen>
 </resources>
